lib/type/static/testdata/errors/nil_method.lua
-- Calling a method on an uninitialized (nil) variable.
local x
local result = x:match("pattern")
