lib/type/static/testdata/errors/nil_method.expected
test.lua:3:17: error: method call 'match' on nil variable 'x'
  3 | local result = x:match("pattern")
                      ^
